fix(explorer): Footer navigation no longer wraps on mobile devices

--- a/src/elements/common/pagination/Pagination.scss
+++ b/src/elements/common/pagination/Pagination.scss
@@ -7,5 +7,13 @@
 .be-pagination-count {
     align-items: center;
     display: flex;
-    margin-right: 20px;
+
+    .be-is-small & {
+        display: none;
+    }
+}
+
+.be-pagination-nav {
+    margin-left: 5px;
+    margin-right: 5px;
 }
